--- a/index.html
+++ b/index.html
@@ -2,66 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
-
     <link href="./css/common.css" rel="stylesheet" type="text/css">
     <link href="./css/index.css" rel="stylesheet" type="text/css">
 
+    <script src="./js/utils.js"></script>
     <script src="./js/db.js"></script>
-    <script src="./js/signinSession.js"></script>
+    <script src="./js/menuChange.js"></script>
     <script src="./js/viewChange.js"></script>
+    <script src="./js/signinSesson.js"></script>
     <script src="./js/index.js"></script>
 
+    <title>Oneline Diary</title>
 </head>
+
 <body>
     
     <div id="wrap">
-
-        <div class="title_wrap">
+        <div class = "title_wrap">
             Oneline Diary
         </div>
 
         <div class="menu_wrap">
             <a class="sign_up" href="#none">Sign-up</a>
-            <a class="sign_in" href="#none">sign-in</a>
+            <a class="sign_in" href="#none">Sign-in</a>
             <a class="sign_out" href="#none">Sign-out</a>
             <a class="write" href="#none">Write</a>
             <a class="list" href="#none">List</a>
         </div>
 
         <div class="sign_up_wrap">
-            <input type="text" name="u_id" placeholder="Input user ID">
-            <br/>
-            <input type="password" name="u_pw" placeholder="Input user PW">
-            <br/>
-            <input type="email" name="u_mail" placeholder="Input user MAIL">
-            <br/>
+            <input type="text" name="u_id" placeholder="Input user ID"></br>
+            <input type="password" name="u_pw" placeholder="Input user PW"></br>
+            <input type="email" name="u_mail" placeholder="Input user MAIL"></br>       
             <input type="button" value="SIGN UP">
         </div>
 
         <div class="sign_in_wrap">
-            <input type="text" name="u_id" placeholder="Input user ID">
-            <br/>
-            <input type="password" name="u_pw" placeholder="Input user PW">
-            <br/>
+            <input type="text" name="u_id" placeholder="Input user ID"></br>
+            <input type="password" name="u_pw" placeholder="Input user PW"></br>
             <input type="button" value="SIGN IN">
         </div>
 
         <div class="write_wrap">
-            <input type="text"><button>Write</button>
-
+            <input type="text">
+            <button>Write</button>
         </div>
 
         <div class="list_wrap">
 
         </div>
+
     </div>
-
-
-
 
 </body>
 </html>
+
 <template id="list_item">
     <div class="txt"></div>
 </template>
